--- a/style/style.css
+++ b/style/style.css
@@ -45,17 +45,14 @@ a:visited {
 
 .header {
   display: flex;
-  flex-direction: row;
-  padding: 50px 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
   justify-content: space-between;
   align-items: center;
-}
-.header__logo {
-  justify-content: start;
+  gap: 760px;
 }
 .header__menubar {
   display: flex;
-  justify-content: end;
   gap: 50px;
   color: rgb(41, 47, 54);
   font-family: "Jost", sans-serif;
