--- a/style/style.scss
+++ b/style/style.scss
@@ -44,18 +44,17 @@ a {
 
 .header {
     display: flex;
-    flex-direction: row;
-    padding: 50px 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
     justify-content: space-between;
     align-items: center;
+    gap: 760px;
 
     &__logo {
-        justify-content: start;
     }
 
     &__menubar {
         display: flex;
-        justify-content: end;
         gap: 50px;
         color: rgb(41, 47, 54);
         font-family: "Jost", sans-serif;
