--- a/style/style.scss
+++ b/style/style.scss
@@ -43,13 +43,11 @@ a {
 }
 
 .header {
+    width: 1200px;
     display: flex;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px 0;
     justify-content: space-between;
     align-items: center;
-    gap: 760px;
-
     &__logo {
     }
 
